--- a/index.html
+++ b/index.html
@@ -16,9 +16,20 @@
     <br>
     <br>
     <br>
+    <br>
+
     <div class="d-flex justify-content-center">
         <button class="btn btn-primary btn-lg" onclick="myFunction()">Да</button>
-      </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2>Анель Бактыгельдикызы-нын фотосы</h2>
+    <div class="img1">
+        <img src="avatar.jpg" alt="#">
+    </div>
     <script src="app.js"></script>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
